	* FIXED: Bug that resulted in class cast exceptions between BNode and URI when the value of a property was a BNode and did not map to a valid bean entity. (issue #71)
	* FIXED: Appended loader path to Javassist ClassPool during instance generation so Empire works better in some servlet containers, notably Tomcat & Glassfish.

Empire 0.7 (2011-11-18)
=======================
	* MODIFIED: Repackaged all DataSource specific classes into the com.clarkparsia.empire.ds package. (issue #25)
	* MODIFIED: Moved some DataSource specific functions from EmpireUtil to DataSourceUtil
	* MODIFIED: Query results can returned proxied objects, allowing users to defer the loading of the results until they
				iterate over them.  Disable/Enabling this feature is controlled via EmpireOptions.
	* MODIFIED: All contains to contains, and persistence operations (merge/persist/remove) in EntityManager have been
				compacted; the amount of calls to the DataSource has been greatly reduced resulting in a large performance
				increase when cascading persistence operations, and a modest increase overall.
	* MODIFIED: Global config passed through to EntityManagers in the unit config so parameters do not have to be duplicated.
	* MODIFIED: Properties mapped as collections, with no values, return empty collections instead of null. (issue #40)
	* MODIFIED: Laundry list of names checked for configuration files, settling on 'empire.configuration' with the Properties format as the default
	* MODIFIED: Handler for graph queries was checking for duplicates in a less than ideal fashion, changed the handler code which increases the performance of graph queries.
	* MODIFIED: Improved transation support for database which do not provide it natively.
	* MODIFIED: Upgrade to TDB 0.8.7, Jena 2.6.4, CP OpenRdfUtil 0.4, CP Util 2.0, Guice 3, Guava r10, Reflections 0.9.5, 4Store API 0.4, ARQ 2.8.8, SDB 1.3.4
	* ADDED: Support for loading the configuration from the jar (issue #58)