@@ -28,81 +28,16 @@ import com.clarkparsia.empire.annotation.Namespaces;
 import com.clarkparsia.empire.annotation.RdfId;
 import com.clarkparsia.empire.annotation.RdfProperty;
 import com.clarkparsia.empire.annotation.RdfsClass;
-
-@Namespaces({
-				"empire",  "https://github.com/mhgrove/Empire/",
-				"dcterms", "http://purl.org/dc/terms/" })
-@Entity
-@RdfsClass("empire:Business")
-public class BusinessObject extends BaseRdfEntity
+public interface BusinessObject
 {
-	@RdfId
-	private String uri;
-	@RdfProperty("dcterms:title")
-	private String title;
-	@RdfProperty("empire:event")
-	@OneToMany(fetch = FetchType.LAZY, cascade = { CascadeType.ALL })
-	private Collection<Event> events = new TreeSet<Event>();
+    public String getUri();
 
-	public BusinessObject() {
-		// NOP
-	}
-	public BusinessObject(String uri) {
-		this.uri = uri;
-	}
+    public String getTitle();
+    public void setTitle(String t);
 
-	public String getUri() {
-		return this.uri;
-	}
-
-	public String getTitle() {
-		return this.title;
-	}
-
-	public void setTitle(String t) {
-		this.title = t;
-	}
-
-	public void add(Event event) {
-		this.events.add(event);
-	}
-
-	public Collection<Event> getEvents() {
-		return new TreeSet<Event>(this.events);
-	}
-
-	public Collection<Event> getEvents(String uri) {
-		return this.getEvents(Event.class, uri);
-	}
-
-	public <T extends Event> Collection<T> getEvents(Class<T> type, String uri) {
-		if (type == null) {
-			throw new IllegalArgumentException("type");
-		}
-		Collection<T> l = null;
-		for (Event e : this.events) {
-			if ((e.getClass().isAssignableFrom(type)) &&
-				((uri == null) || (e.getSubject().equals(uri)))) {
-				if (l == null) {
-					l = new TreeSet<T>();
-				}
-				l.add(type.cast(e));
-			}
-		}
-		if (l == null) {
-			l = Collections.emptySet();
-		}
-		return l;
-	}
-
-	@Override
-	protected void setId(String id) {
-		this.uri = id;
-	}
-
-	@Override
-	public String toString() {
-		return "\n\"" + this.getUri() + "\" { title: \"" + this.getTitle()
-			   + ", events: " + this.getEvents() + " }";
-	}
+    public void add(Event event);
+    public Collection<Event> getEvents();
+    public Collection<Event> getEvents(String uri);
+    public <T extends Event> Collection<T> getEvents(Class<T> type,
+                                                            String uri);
 }
